--- a/package.json
+++ b/package.json
@@ -2,9 +2,27 @@
   "name": "white-flow",
   "version": "0.0.1",
   "description": "Game engine",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
   "repository": "https://github.com/yazmeyaa/white-flow",
   "author": "yazmeyaa[evgenijantonenkov456@gmail.com]",
   "license": "AGPL-3.0",
-  "private": false
+  "private": false,
+  "scripts": {
+    "build": "tsc && vite build",
+    "build:types": "dts-bundle-generator --config ./dts-bundle-generator.config.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.11",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.2"
+  },
+  "dependencies": {
+    "vite-plugin-dts": "^4.5.3"
+  }
 }
