--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
   "private": false,
   "scripts": {
     "build": "tsc && vite build",
-    "build:types": "dts-bundle-generator --config ./dts-bundle-generator.config.ts"
+    "build:types": "dts-bundle-generator --config ./dts-bundle-generator.config.ts",
+    "test": "jest"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/node": "^22.13.11",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "vite-plugin-dts": "^4.5.3"
   },
   "dependencies": {
-    "vite-plugin-dts": "^4.5.3"
+    "bitmap-index": "^0.0.2"
   }
 }
